verifications and some citations

--- a/notebooks/Kaylan/docs/Final Report/final_report.tex
+++ b/notebooks/Kaylan/docs/Final Report/final_report.tex
@@ -66,9 +66,9 @@
 \begin{minipage}{0.5\textwidth}
     \begin{center} \large
         \underline{\textbf{Team \#20}} \\ \medskip
-        \textsc{Sultan Alnuaimi} (saltana2@illinois.edu) \\
         \textsc{Edan Elazar} (eelazar@illinois.edu) \\  
-        \textsc{Kaylan Wang} (kaylanw4@illinois.edu)    
+        \textsc{Kaylan Wang} (kaylanw4@illinois.edu)  \\
+        \textsc{Sultan Alnuaimi} (saltana2@illinois.edu)
     \end{center}
 \end{minipage} \\[1.5cm]
 
