--- a/notebooks/Kaylan/docs/Final Report/references.bib
+++ b/notebooks/Kaylan/docs/Final Report/references.bib
@@ -82,3 +82,22 @@
   howpublished = {\url{https://invensense.tdk.com/wp-content/uploads/2016/06/DS-000189-ICM-20948-v1.3.pdf}},
   note         = {Accessed: [Online; accessed 22-March-2024]}
 }
+
+
+@manual{panasonic2023datasheet,
+  title        = {ACG4000 Series Datasheet},
+  author       = {Panasonic},
+  year         = 2023,
+  url          = {https://industrial.panasonic.com/cdbs/www-data/pdf2/ACG4000/ACG4000CE275.pdf},
+  note         = {Accessed on: [insert today's date]},
+  organization = {Panasonic Industrial Devices}
+}
+
+@misc{sparkfun2023icm20948,
+  author       = {SparkFun Electronics},
+  title        = {SparkFun 9DoF IMU ICM-20948 Breakout Hookup Guide},
+  year         = 2023,
+  howpublished = {Online Tutorial},
+  url          = {https://learn.sparkfun.com/tutorials/sparkfun-9dof-imu-icm-20948-breakout-hookup-guide/all},
+  note         = {Accessed on: [insert today's date]}
+}
