--- a/notebooks/Kaylan/docs/Final Report/sections/design.tex
+++ b/notebooks/Kaylan/docs/Final Report/sections/design.tex
@@ -48,7 +48,7 @@ The sensor subsystem in figure \ref{fig:IMU_sub} consists of the ICM-20948 IMU w
     \caption{Schematic of the sensor subsystem}
     \label{fig:IMU_sub}
 \end{figure}
-In order to power the system, we used a 3000mAh 4.8V NiMH battery. As shown in table \ref{tab:current_draw}, our total current draw is 1864.2 mA so our estimated battery life of the system is $3000 \text{ mAh} / 1864.2 \text{ mA} = 1.61 \text{ hours}$. 
+In order to power the system, we used a 3000mAh 4.8V NiMH battery from Panasonic \cite{panasonic2023datasheet}. As shown in table \ref{tab:current_draw}, our total current draw is 1864.2 mA so our estimated battery life of the system is $3000 \text{ mAh} / 1864.2 \text{ mA} = 1.61 \text{ hours}$. 
 \begin{table}[h]
     \centering
     \caption{Current Draw of System Components}
