schedule and conclusion

--- a/notebooks/Kaylan/docs/Final Report/sections/costs.tex
+++ b/notebooks/Kaylan/docs/Final Report/sections/costs.tex
@@ -30,3 +30,12 @@ The total cost of parts will be approximately $\$234.96$ and the expected labor 
     \end{table}
 \newpage
 \subsection{Schedule}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.81\textwidth]{images/schedule_new.png}
+    \caption{Schedule of the project}
+    \label{fig:schedule}
+\end{figure}
+
+\newpage
