--- a/notebooks/Kaylan/docs/Final Report/sections/conclusion.tex
+++ b/notebooks/Kaylan/docs/Final Report/sections/conclusion.tex
@@ -1,6 +1,51 @@
 \section{Conclusion}
 
 \subsection{Accomplishments}
+We were able to build a device that could successfully aid riders in signaling their intentions to others. The device met all three high level requirements. It differentiates between turn left, right, slow down, and hazard with an accuracy of over 90\%. The jacket also maps the hand gestures accurately to the respective LEDs. Finally, the LEDs are clearly visible from 250 ft. 
+
+So, using this product, we could ask anyone to wear it and ride the bike regularly. The rider only needs to know the hand gestures, which are widely known already. A big bonus is that it’s easy to use, and not complicated. Other models might require the rider to press buttons which could be distracting and unnatural.
+
 \subsection{Uncertainties}
+Some things did not go according to plan. For example, the LEDs could have been slightly brighter using an LED driver. However, we decided to omit it to increase the chances of having a working PCB since adding the LED driver would have been at the very last minute. We couldn’t test it beforehand or use a breadboard because the LED driver only came as an SMD.
+
+In addition, we tested the arm gesture while standing upright, and we managed to get around a 90\% accuracy. However, when we went to the bike, we did not have enough time to calibrate it well before the demo. We used the magnetometer to determine which of the arm gestures are detected. It might have been easier in terms of calibration if we used a more automatic way of calibrating. For example using a button as we discussed below. In addition, using a Neural Network might have given us a better outcome in terms of accuracy, since we can use the data from all the sensors to determine the arm gestures.
+
 \subsection{Future Work}
-\subsection{Ethics Considerations}
+\begin{enumerate}
+    \item \textbf{Smaller PCB enclosure.}
+    
+    3D printing a PCB enclosure takes 13 hours, so we decided to make it a little bigger to ensure it fits perfectly. Thankfully, it fits but it's a little large. It might cause some disturbance to the rider, so making it smaller would be a good idea.
+
+    \item \textbf{Using a third IMU on the right arm}
+    
+    Due to time constraints, we were not able to connect the third IMU. The ESP32 has 2 I2C pins, and we could make a new one in software or maybe even use a multiplexer. Having an additional IMU will allow the rider to use the right arm to turn right.
+
+    \item \textbf{Calibration button}
+    
+    Before usage, we had to calibrate the device manually by reading off the angles the user holds their arms at when making an arm gesture. This could be affected by personal preference or type of bike. This would be unnecessarily difficult for a user, but decrease the accuracy if they don’t go through the calibration. Because of this, we would like to add a calibration button where the user makes a gesture and presses the button to calibrate it. The control unit would read the angle measurements of the users' arms and use those as the values for gesture recognition rather than our default ones.
+\end{enumerate}
+
+\subsection{Ethical Considerations}
+The biggest concern as it relates to ethics and safety for 
+this project is with regard to the safety of the user and 
+those on the road around the user. Under the IEEE code of 
+ethics (Code I1), we are required to prioritize the 
+safety of the public \cite{IEEEethics2024}. If the wearable isn’t user
+friendly enough, or restricts any movements, this can lead 
+to potentially catastrophic accidents. We can solve this by 
+integrating the electronics out of the way of the user, 
+such as in the inner pockets of the jacket (for the PCB 
+and battery), and providing ample slack in the wires 
+throughout. This will allow the user to move more naturally.
+Another concern might be the privacy of the user \cite{IEEEethics2024}
+because we will be collecting and processing data constantly 
+during a ride/commute. We can limit the data collection to 
+IMU data, so that nothing personally identifiable is
+collected, as well as deleting any data past a certain 
+period of time. 
+
+
+
+
+\subsection{Safety Considerations}
+We have to consider the brightness of the LEDs, and if they can be distracting to other drivers and pedestrians. Having bright LEDs can be beneficial for low light or adverse conditions, but can also be harmful if they dazzle other drivers, impairing their vision. There aren’t any safety regulatory requirements for LEDs for bicycles relating to the brightness of the lights, so we make sure we are following the vehicle regulations for turn signals. \cite{CFR571_108} There are also consumer product safety standards that we need to follow for wearable technology, such as those related to electronics devices and battery safety. It is also important to note that wearing a battery is always dangerous. Because of this we will be following the guidelines on battery safety outlined by UIUC \cite{UIUCBatterySafety2023}. In addition, we verified in our tolerance analysis that the linear regulators will not get too hot to ensure the safety of the users.
