--- a/notebooks/Kaylan/docs/Final Report/sections/introduction.tex
+++ b/notebooks/Kaylan/docs/Final Report/sections/introduction.tex
@@ -11,7 +11,7 @@ The final product achieved all 3 high level requirements. The device is able to 
 \newpage
 
 \subsection{Visual Aid}
-Figure \ref{fig:vis_aid} is a mockup of the wearable device that we created. The device will be powered by a battery and will have 2 IMUs to detect the arm gestures. The system will be controlled by an ESP-32 microcontroller that will process the data from the IMUs and send a signal to the LEDs to turn on when the arm gestures are detected.
+Figure \ref{fig:vis_aid} is a mockup of the wearable device that we created where the dotted lines indicate the connections are inside the jacket. The device will be powered by a battery and will have 2 IMUs to detect the arm gestures. The system will be controlled by an ESP-32 microcontroller that will process the data from the IMUs and send a signal to the LEDs to turn on when the arm gestures are detected.
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\textwidth]{images/visual_aid_new.jpg}
