--- a/notebooks/Kaylan/docs/Final Report/sections/design.tex
+++ b/notebooks/Kaylan/docs/Final Report/sections/design.tex
@@ -23,7 +23,7 @@ Where $R_1$ and $R_2$ control the output voltage of the linear voltage regulator
     \label{fig:power_sub}
 \end{figure}
 \newpage
-The control unit in figure \ref{fig:control_sub} consists of the ESP32-S3 which we use to control our entire system. We needed to add a programming circuit for it and ensure it has the proper connections to all the other subsystems.
+The control unit in figure \ref{fig:control_sub} consists of the ESP32-S3 \cite{EspressifESP32} which we use to control our entire system. We needed to add a programming circuit for it and ensure it has the proper connections to all the other subsystems.
 
 \begin{figure}[ht]
     \centering
