abstract and appendix

--- a/notebooks/Kaylan/docs/Final Report/final_report.tex
+++ b/notebooks/Kaylan/docs/Final Report/final_report.tex
@@ -57,7 +57,7 @@
 %---------------------------------------------------------------------------------
 
 \HRule \\[0.5cm]
-\huge \textbf{Gesture Base Turn Signaling System} % Title
+\huge \textbf{Gesture-Based Turn Signaling System} % Title
 \HRule \\[2cm]
  
 %---------------------------------------------------------------------------------
