--- a/notebooks/Kaylan/docs/Final Report/sections/abstract.tex
+++ b/notebooks/Kaylan/docs/Final Report/sections/abstract.tex
@@ -1,3 +1,3 @@
 \section*{Abstract} % * makes it so that the section is not numbered
 
-This document provides an outline and \LaTeX\ template for report formatting in Senior Design. This document does not teach you what to include, or how to use LaTeX. Assumes a workable level of LaTeX proficiency.
+This report details the design, development, and verification of a gesture-based turn signaling system intended to enhance the visibility and safety of cyclists, skateboarders, and scooter riders. Utilizing inertial measurement units (IMUs) integrated into a jacket, the system processes arm gestures to activate corresponding LED signals for turns and stops. Our development focused on the design of four main subsystems: sensors, control, power, and LEDs. Through testing, the device demonstrated over 90\% accuracy in gesture recognition, effectively translating these gestures into visible LED signals. 
