--- a/notebooks/Kaylan/docs/Final Report/final_report.tex
+++ b/notebooks/Kaylan/docs/Final Report/final_report.tex
@@ -107,12 +107,14 @@
 
 \clearpage
 
-\newpage
-\bibliography{references}
+
 
 \begin{appendices}
     \clearpage
     \input{sections/appendixa.tex}
     % copy the above two lines to add more appendices
 \end{appendices}
+\clearpage
+\newpage
+\bibliography{references}
 \end{document}
